# oracledb-datapump

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cli/: Dockerfile
lambda/: Dockerfile  lambda-requirements.txt  lambda_handler.py
src/oracledb_datapump/: __init__.py  __main__.py  base.py  client.py  commands.py  constants.py  context.py  database.py  directives.py  exceptions.py  files.py  handlers.py  job.py  log.py  request.py  sql.py  status.py  util.py
src/oracledb_datapump/entrypoints/: aws_lambda.py  cli.py
tests/: conftest.py  constants.py  docker-compose.yml  requirements.txt  test_export.py  test_import.py
tests/scripts/db/setup/: 01_create_sample_schema.sql  02_create_users2_tablespace.sql
